# Rules-Emerging-Pattern

./: .env.example  .gitignore  Build-plan.md  Build-prompt.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  Hard-rules.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  features.md  generate_files.py  pyproject.toml  requirements.txt  skills.md  talks.md
.github/workflows/: ci.yml
config/: File-structure.md
config/enforcement_configs/: conflict_resolution.yaml  enforcement_levels.yaml  monitoring_config.yaml
config/environments/: development.yaml  production.yaml
config/rule_configs/: operational_rules.yaml  preference_rules.yaml  safety_rules.yaml
config/validation_configs/: content_filters.yaml  exception_handling.yaml  validation_patterns.yaml
conflict_resolution/conflict_detectors/: priority_conflict_detector.py  rule_conflict_detector.py  semantic_conflict_detector.py
conflict_resolution/conflict_logging/: conflict_analysis.py  conflict_recorder.py  resolution_tracker.py
conflict_resolution/resolution_strategies/: context_aware.py  fallback_resolution.py  priority_based.py  user_preference.py
docs/: api_reference.md  architecture.md
evaluation_framework/benchmarking/: conflict_resolution.py  rule_performance.py  system_comparison.py
evaluation_framework/compliance_testing/: operational_compliance.py  regulatory_compliance.py  safety_compliance.py
evaluation_framework/monitoring/: alerting_system.py  historical_analysis.py  realtime_monitoring.py
evaluation_framework/rule_evaluation/: coverage_metrics.py  effectiveness_metrics.py  impact_analysis.py
examples_and_demos/: basic_rule_validation.py
examples_and_demos/advanced_examples/: 01_conflict_resolution.py  02_adaptive_rules.py  03_rule_optimization.py
examples_and_demos/basic_examples/: 01_simple_validation.py  02_tier_specific_rules.py  03_batch_processing.py  04_context_aware_rules.py  05_custom_rule_creation.py
examples_and_demos/production_examples/: 01_fastapi_server.py  02_cli_usage.py  03_monitoring.py
integration_layers/api_integration/: graphql_rules.py  rest_api_rules.py  websocket_rules.py
integration_layers/external_systems/: cloud_service_rules.py  database_rules.py  third_party_rules.py
integration_layers/system_integration/: rag_integration.py  skills_integration.py  system_prompt_integration.py
k8s/: deployment.yaml
rule_engines/base/: rule_manager.py  rule_parser.py
rule_engines/enforcement/: adaptive_enforcer.py  advisory_enforcer.py  fallback_handler.py  strict_enforcer.py
rule_engines/monitoring/: audit_logger.py  conflict_logger.py  performance_monitor.py  rule_usage_tracker.py
rule_learning/adaptive_rules/: context_learning.py  rule_adaptation.py  user_feedback_integration.py
rule_learning/pattern_recognition/: conflict_patterns.py  exception_patterns.py  rule_usage_patterns.py
rule_learning/rule_optimization/: efficiency_optimizer.py  performance_optimizer.py  relevance_optimizer.py
rule_repositories/custom_rules/organization_rules/: README.md  example_rule.yaml
rule_repositories/custom_rules/temporary_rules/: README.md
rule_repositories/custom_rules/user_rules/: README.md  example_rule.yaml
rule_repositories/predefined_rules/operational_rules/: copyright_compliance.md  (+1 more)
rule_repositories/rule_templates/: operational_template.yaml  preference_template.yaml  safety_template.yaml
rules_emerging_pattern/: __init__.py  main.py
rules_emerging_pattern/advanced/: __init__.py  age_verification.py  emergency_response.py  intent_recognition.py  reporting_system.py  sandbox.py
rules_emerging_pattern/cli/: __init__.py  cli.py
rules_emerging_pattern/compliance/: __init__.py  gdpr_compliance.py
rules_emerging_pattern/core/: rule_engine.py
rules_emerging_pattern/learning/: __init__.py  pattern_engine.py  trend_analyzer.py
rules_emerging_pattern/models/: conflict.py  rule.py  validation.py
rules_emerging_pattern/monitoring/: __init__.py  alerting.py  dashboard.py
rules_emerging_pattern/privacy/: __init__.py  data_redaction.py
scripts/: rule_generator.py  setup.py
tests/compliance_tests/: test_safety.py
tests/integration_tests/: test_api.py
tests/load_tests/: test_performance.py
tests/unit_tests/: conftest.py  test_enforcement.py  test_models.py  test_rule_engine.py  test_validation.py
validation_systems/content_filtering/: copyright_filter.py  pii_filter.py  profanity_filter.py  sensitive_content_filter.py
validation_systems/exception_handling/: escalation_protocols.py  user_notification.py
validation_systems/input_validation/: compliance_validator.py  content_validator.py  format_validator.py  safety_validator.py
validation_systems/output_validation/: citation_validator.py  hallucination_detector.py  quality_validator.py
(+6 files in other folders)
