[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rules-emerging-pattern"
version = "1.0.0"
description = "AI Guardrails and Consistency Framework with Tiered Rule Architecture"
authors = [
    {name = "Rules Engine Team", email = "team@rules-emerging-pattern.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai", "safety", "rules", "guardrails", "compliance", "validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "psycopg2-binary>=2.9.9",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.4",
    "pandas>=2.1.4",
    "nltk>=3.8.1",
    "transformers>=4.36.0",
    "torch>=2.1.2",
    "regex>=2023.10.3",
    "python-Levenshtein>=0.25.1",
    "textstat>=0.7.3",
    "cryptography>=41.0.8",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "sentry-sdk>=1.38.0",
    "aiofiles>=23.2.1",
    "asyncio-mqtt>=0.16.1",
    "celery>=5.3.4",
    "strawberry-graphql>=0.215.1",
    "websockets>=12.0",
    "httpx>=0.25.2",
    "jsonschema>=4.20.0",
    "marshmallow>=3.20.1",
    "email-validator>=2.1.0",
    "spacy>=3.7.2",
    "langdetect>=1.0.9",
    "profanity-check>=1.0.3",
    "python-gnupg>=0.5.2",
    "audit-log>=0.3.0",
    "ray>=2.8.0",
    "dask>=2023.11.0",
    "kombu>=5.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "factory-boy>=3.3.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
]
cloud = [
    "docker>=6.1.3",
    "kubernetes>=28.1.0",
    "boto3>=1.34.0",
    "google-cloud-aiplatform>=1.38.0",
    "azure-identity>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/your-org/rules-emerging-pattern"
Documentation = "https://docs.rules-emerging-pattern.com"
Repository = "https://github.com/your-org/rules-emerging-pattern.git"
Issues = "https://github.com/your-org/rules-emerging-pattern/issues"

[project.scripts]
rules-cli = "rules_emerging_pattern.cli:main"
rules-server = "rules_emerging_pattern.main:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["rules_emerging_pattern*"]

[tool.setuptools.package-data]
rules_emerging_pattern = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.md"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["rules_emerging_pattern"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "compliance: marks tests as compliance tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.coverage.run]
source = ["rules_emerging_pattern"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]